<resources>
    <string name="app_name">24Game</string>
    <string name="single_player_launch_button">2 Minute Rush</string>
    <string name="multi_player_launch_button">Online Play</string>
    <string name="practice_launch_button">Practice</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="backspace_symbol">⌫</string>
    <string name="enter_solution">Input Solution</string>
    <string name="clear_button">Clear</string>
    <string name="button_filler_text">24</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="times">×</string>
    <string name="divides">/</string>
    <string name="left_paren">(</string>
    <string name="right_paren">)</string>
    <string name="give_up">Give up</string>
    <string name="submit">Submit</string>
    <string name="give_up_text_solution">Oh no! One solution was %1$s.</string>
    <string name="give_up_text_impossible">There were no solutions.</string>
    <string name="submit_text_incorrect">Oops, that is incorrect.</string>
    <string name="submit_text_incorrect_singleplayer">Oops, that is incorrect. (-5 s)</string>
    <string name="submit_text_correct">Congratulations, that is correct!</string>
    <string name="submit_text_correct_singleplayer">Congratulations, that is correct! (+5 s)</string>
    <string name="time">Time:</string>
    <string name="score">Score:</string>
    <string name="give_up_singleplayer">Give up (-3 s)</string>
    <string name="game_over_singleplayer">Time\'s up! Your score was %1$d</string>
</resources>
